--- a/Stack.vcxproj.filters
+++ b/Stack.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="TStack.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Tparser.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
