--- a/Stack.vcxproj.filters
+++ b/Stack.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="Test_stack.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Test_parser.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
